{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "game_pad",
            "id": "b3c4342f-1868-46f7-ac67-c7ed99b67f35",
            "actions": [
                {
                    "name": "left_bump",
                    "type": "Button",
                    "id": "f4e80b66-aa3e-4755-ac47-96abab64ace1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "right_bump",
                    "type": "Value",
                    "id": "d0883fa3-d9e4-4212-be18-ca8ff8f6dfe5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "move_cube",
                    "type": "Value",
                    "id": "95a580c9-c69f-4e12-bc59-9cdab5f2b814",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "rotate_cube",
                    "type": "Value",
                    "id": "3040395e-cc11-43a0-b2b4-41e7312d77c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "pause",
                    "type": "Button",
                    "id": "848dc41a-0ce1-44ae-8914-7d63e227798d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "actionA",
                    "type": "Button",
                    "id": "a3a5ac12-3584-4a85-824b-7f72a10fb4af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonB",
                    "type": "Button",
                    "id": "be7df2b4-d0b2-4a03-9d05-4c267e170a92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonY",
                    "type": "Button",
                    "id": "180d1618-0b16-4394-aeb7-446d4ba44299",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "cross_left",
                    "type": "Button",
                    "id": "d83ea349-99c3-4c8a-864a-52835e293e24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "211ad6f0-5236-4a32-afbb-86a7bd0533fb",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left_bump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26d45a59-8e81-4e18-ad16-d872c1292148",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left_bump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ada8d87f-0981-4949-87e6-24ae1ca229c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left_bump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "928e0d64-9a86-4332-8bff-d2879b6d25f4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move_cube",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "870e3d02-3c33-499e-abae-e2462f8aa4ea",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate_cube",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "31a3f5ae-7f73-4bee-a50f-782ecd7e8fd9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate_cube",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e2a30ca9-8440-4eb6-922c-4393a90b2853",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fa403f93-c7dc-48aa-9ee6-3535cfbf0d92",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f6a74a8a-d557-4afd-95c6-8e93590d44f4",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Normalize(max=-1)",
                    "groups": "",
                    "action": "rotate_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "aeba5f9d-36a8-4184-8ca6-04eb71ec4a79",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "rotate_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "68daef14-eaf5-437f-81ec-02d2e1f3d995",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b531a20-c39c-482a-9a04-2ab68cdf576c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "actionA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1104903a-b143-4787-9274-e559573a3ae9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "actionA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b13b79f0-db9a-49fa-b9e9-acf7303c7a93",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11f7de56-8bf1-4891-bfb5-a7b3125a884f",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "arrow [Keyboard]",
                    "id": "f7f09fa2-23cc-440d-bc8a-5bec54e523a4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move_cube",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9490b581-b7d9-498b-b65a-a71140248879",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "move_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0ab08212-f1d4-4044-ab28-77cb9412c4dc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "move_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cdecc018-4e85-4220-8d4f-07185dfb05e7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "move_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f8c9ba65-e5d3-49a8-b27e-8879b5208d85",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "",
                    "action": "move_cube",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9b4d6ce0-0bfb-4129-b71a-633831356a96",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cross_left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cefbe91b-d66d-43e7-8442-957b8977f46e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right_bump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04ebec83-e181-477e-bb6c-68d221939b96",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3887261e-c3b8-4a37-a8de-50f15755205c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "keyboard",
            "id": "1af32109-6616-4873-b15d-76c4e1e7e56d",
            "actions": [
                {
                    "name": "A",
                    "type": "Button",
                    "id": "af9a0f78-27dc-4d8f-8e13-5f65618130d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "New action1",
                    "type": "Value",
                    "id": "f8785dd9-1142-4a53-b7a8-0678351d18a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": []
        }
    ],
    "controlSchemes": []
}